add guideline link

--- a/i18n/id.yaml
+++ b/i18n/id.yaml
@@ -1,5 +1,5 @@
 - id: recent_post
-  translation: Posting Terbaru
+  translation: Postingan Terbaru
 
 - id: blog_categories
   translation: Kategori Blog
